fixed navbar animation. made responsive page so can view on mobile.

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -124,6 +124,7 @@
     .navigation-menu {
         transition: all 0.5s ease;
         right: -110%;
+        display: none;
     }
 
     .navigation-menu {
@@ -170,5 +171,6 @@
         transition: all 0.5s ease;
         z-index: 1;
         right: 0;
+        display: block;
     }
 }
